--- a/locale/hu/LC_MESSAGES/meerk40t.po
+++ b/locale/hu/LC_MESSAGES/meerk40t.po
@@ -8882,7 +8882,7 @@ msgid "Raster Power"
 msgstr ""
 
 #: meerk40t/newly/device.py:411
-msgid "How what power level do we raster at?"
+msgid "At what power level we raster at?"
 msgstr ""
 
 #: meerk40t/newly/device.py:420
