--- a/locale/it/LC_MESSAGES/meerk40t.po
+++ b/locale/it/LC_MESSAGES/meerk40t.po
@@ -9020,7 +9020,7 @@ msgid "Raster Power"
 msgstr "Potenza raster"
 
 #: meerk40t/newly/device.py:411
-msgid "How what power level do we raster at?"
+msgid "At what power level we raster at?"
 msgstr "A quale livello di potenza rasterizziamo?"
 
 #: meerk40t/newly/device.py:420
