--- a/locale/hu/LC_MESSAGES/meerk40t.po
+++ b/locale/hu/LC_MESSAGES/meerk40t.po
@@ -13260,7 +13260,7 @@ msgid "Speed (mm/s)"
 msgstr "Sebesség (mm/s)"
 
 #: meerk40t/gui/propertypanels/operationpropertymain.py:415
-msgid "Speed at which the head moves in mm/s."
+msgid "Speed at which the head moves in {unit}."
 msgstr ""
 
 #: meerk40t/gui/propertypanels/operationpropertymain.py:417
