--- a/locale/nl/LC_MESSAGES/meerk40t.po
+++ b/locale/nl/LC_MESSAGES/meerk40t.po
@@ -13301,8 +13301,8 @@ msgid "Speed (mm/s)"
 msgstr "Snelheid (mm/s)"
 
 #: meerk40t/gui/propertypanels/operationpropertymain.py:415
-msgid "Speed at which the head moves in mm/s."
-msgstr "Snelheid waarmee de kop beweegt in mm/s."
+msgid "Speed at which the head moves in {unit}"
+msgstr "Snelheid waarmee de kop beweegt in {unit}."
 
 #: meerk40t/gui/propertypanels/operationpropertymain.py:417
 msgid ""
