--- a/locale/it/LC_MESSAGES/meerk40t.po
+++ b/locale/it/LC_MESSAGES/meerk40t.po
@@ -4726,7 +4726,7 @@ msgid "Info"
 msgstr "Informazioni"
 
 #: meerk40t/gui/preferences.py:177
-msgid "This will import a previosuly saved configuration file!"
+msgid "This will import a previously saved configuration file!"
 msgstr "Questo importerà un file di configurazione salvato in precedenza!"
 
 #: meerk40t/gui/preferences.py:179
@@ -4737,7 +4737,7 @@ msgstr ""
 "Questo potrebbe rendere MeerK40t non funzionante se il file non ha il formato corretto!"
 
 #: meerk40t/gui/preferences.py:184
-msgid "You do this at you own risk - are you realy sure?"
+msgid "You do this at you own risk - are you really sure?"
 msgstr "Fai questo a tuo rischio - sei davvero sicuro?"
 
 #: meerk40t/balormk/gui/balorconfig.py:53
@@ -4870,7 +4870,7 @@ msgid "Insert '{operation}' before"
 msgstr "Inserisci '{operation}' prima"
 
 #: meerk40t/gui/simulation.py:502 meerk40t/gui/simulation.py:817
-msgid "Inserts this special operation before the current cutplan entrys"
+msgid "Inserts this special operation before the current cutplan entry"
 msgstr "Inserisce questa operazione speciale prima delle voci del piano di taglio corrente"
 
 #: meerk40t/gui/simulation.py:514 meerk40t/gui/simulation.py:829
