--- a/locale/fr/LC_MESSAGES/meerk40t.po
+++ b/locale/fr/LC_MESSAGES/meerk40t.po
@@ -14445,7 +14445,7 @@ msgid "Byte 5"
 msgstr ""
 
 #: meerk40t/lihuiyu/gui/lhycontrollergui.py:345
-msgid "Connect Failed"
+msgid "Connect failed"
 msgstr ""
 
 #: meerk40t/lihuiyu/gui/lhycontrollergui.py:353
