--- a/locale/messages.po
+++ b/locale/messages.po
@@ -14445,7 +14445,7 @@ msgid "Byte 5"
 msgstr ""
 
 #: meerk40t/lihuiyu/gui/lhycontrollergui.py:345
-msgid "Connect Failed"
+msgid "Connect failed"
 msgstr ""
 
 #: meerk40t/lihuiyu/gui/lhycontrollergui.py:353
