--- a/locale/pt_PT/LC_MESSAGES/meerk40t.po
+++ b/locale/pt_PT/LC_MESSAGES/meerk40t.po
@@ -3009,7 +3009,7 @@ msgid "Run the commands to make these operations valid."
 msgstr "Executar os comandos para que estas operações sejam válidas."
 
 #: meerk40t/gui/executejob.py:232
-msgid "Create Lasercode"
+msgid "Convert data"
 msgstr ""
 
 #: meerk40t/gui/executejob.py:234
