--- a/locale/es/LC_MESSAGES/meerk40t.po
+++ b/locale/es/LC_MESSAGES/meerk40t.po
@@ -2969,7 +2969,7 @@ msgid "Run the commands to make these operations valid."
 msgstr ""
 
 #: meerk40t/gui/executejob.py:232
-msgid "Create Lasercode"
+msgid "Convert data"
 msgstr ""
 
 #: meerk40t/gui/executejob.py:234
