--- a/locale/hu/LC_MESSAGES/meerk40t.po
+++ b/locale/hu/LC_MESSAGES/meerk40t.po
@@ -2985,7 +2985,7 @@ msgid "Run the commands to make these operations valid."
 msgstr ""
 
 #: meerk40t/gui/executejob.py:232
-msgid "Create Lasercode"
+msgid "Convert data"
 msgstr ""
 
 #: meerk40t/gui/executejob.py:234
