--- a/locale/it/LC_MESSAGES/meerk40t.po
+++ b/locale/it/LC_MESSAGES/meerk40t.po
@@ -3043,7 +3043,7 @@ msgid "Run the commands to make these operations valid."
 msgstr "Esegui i comandi per rendere valide queste operazioni."
 
 #: meerk40t/gui/executejob.py:232
-msgid "Create Lasercode"
+msgid "Convert data"
 msgstr "Crea Codice Laser"
 
 #: meerk40t/gui/executejob.py:234
